VSCODE-338: Fix overflow in long code blocks in webviews

--- a/src/webviews/components/App.css
+++ b/src/webviews/components/App.css
@@ -12,6 +12,10 @@ hr {
   margin-bottom: 1em;
 }
 
+pre {
+  white-space: pre-wrap;
+}
+
 .force-wrap {
   /* These are technically the same, but use both */
   overflow-wrap: break-word;
